src/test/regression_testing/test_files/Python/NPD/good/test10.py
def test10_main():
    value = None
    value = "None"
    print(value[:1])

test10_main()